5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1758_1185.log
== TEST (2019-05-28 11:15:59) 
-- CODE:
from numpy import *
a = array(eval(input('nivel de glicose: ')))
i = 0
j = 0

while j < size(a):
	if a[j]<99:
		print(j)
	j+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:17:05) 
-- CODE:
from numpy import *
a = array(eval(input('nivel de glicose: ')))
i = 0
j = 0

while j < size(a):
	if a[j]>99:
		print(j)
	j+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:42) 
-- CODE:
from numpy import *
a = array(eval(input('nivel de glicose: ')))
i = 0
j = 0

while j < size(a):
	if a[j]>99:
		print(j)
	j+=1
while i < size(a):
	if a[i] == 99
		print(i)
	i+=1
	
-- ERROR:
File "XXXX", line 11
    if a[i] == 99
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:48) 
-- CODE:
from numpy import *
a = array(eval(input('nivel de glicose: ')))
i = 0
j = 0

while j < size(a):
	if a[j]>99:
		print(j)
	j+=1
while i < size(a):
	if a[i] == 99:
		print(i)
	i+=1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:19:50) 
-- CODE:
from numpy import *
a = array(eval(input('nivel de glicose: ')))
i = 0
j = 0

while j < size(a):
	if a[j]>99:
		print(j)
	j+=1
while i < size(a):
	if a[i] == 99:
		print(i)
	i+=1
	
-- EXECUTION TIME:
0.412745
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:21:04) 
-- CODE:
from numpy import *
a = array(eval(input('nivel de glicose: ')))
i = 0
j = 0

while j < size(a):
	if a[j]>99:
		print(j)
		i += 1
	j+=1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:21:07) 
-- CODE:
from numpy import *
a = array(eval(input('nivel de glicose: ')))
i = 0
j = 0

while j < size(a):
	if a[j]>99:
		print(j)
		i += 1
	j+=1
print(i)
-- EXECUTION TIME:
0.386577
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
